--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "cucumber": "^6.0.5",
     "cucumber-html-reporter": "^5.2.0",
     "cucumber-pretty": "^6.0.0",
+    "date.js": "^0.3.3",
     "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "geckodriver": "^1.19.1",
     "mkdirp": "^1.0.4",
     "nightwatch": "^1.3.7",
-    "nightwatch-api": "^3.0.1"
+    "nightwatch-api": "^3.0.1",
+    "randomstring": "^1.1.5"
   }
 }
